--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
         <item name="android:includeFontPadding">false</item>
         <item name="android:textColor">@color/capeCod</item>
         <item name="android:lineSpacingExtra">5sp</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
     <style name="FontTextViewLight" parent="ThemeTextView">
